set up page to have side bar

--- a/exploreSD/index.html
+++ b/exploreSD/index.html
@@ -15,8 +15,16 @@
 </head>
 
 <body>
-  <!-- div for map -->
-  <div id="map"></div>
-  <script src="js/index.js"></script>
+  <div id="mapSection">
+    <div class="infoSection">
+      <h1>Explore SD</h1>
+      <p>nice</p>
+    </div>
+    <div class="theMap">
+      <!-- div for leaflet map -->
+      <div id="map"></div>
+      <script src="js/index.js"></script>
+    </div>
+  </div>
 </body>
 </html>
