Added attractions/beaches in locations.json

--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -17,6 +17,7 @@
       integrity="sha512-07I2e+7D8p6he1SIM+1twR5TIrhUQn9+I6yjqD53JQjFiMf8EtC93ty0/5vJTZGF8aAocvHYNEDJajGdNx1IsQ=="
       crossorigin=""/>
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="css/leaflet-routing-machine.css" />
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"
       integrity="sha512-A7vV8IFfih/D732iSSKi20u/ooOfj/AGehOKq0f4vLT1Zr2Y+RX7C+w8A1gaSasGtRUZpF/NZgzSAu4/Gc41Lg=="
       crossorigin=""></script>
@@ -101,12 +102,11 @@
   </div>
 
 
-  
+
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="js/index.js"></script>
   <!-- smooth scrolling -->
   <script>
       // Select all links with hashes
@@ -146,5 +146,7 @@
         }
       });
   </script>
+  <script src="js/leaflet-routing-machine.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
