--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -97,6 +97,16 @@
     <div class="col-md-9 text-center">
       <h2>Map</h2>
       <!-- div for leaflet map -->
+      <!-- div for map's filter-->
+      <div class = "filter"> Filter by: <br>
+        <label><input type="checkbox" name="filter">Attractions</label><br>
+        <label><input type="checkbox" name="filter">Museums</label><br>
+        <label><input type="checkbox" name="filter">Parks and Trails</label><br>
+        <label><input type="checkbox" name="filter">Landmarks</label><br>
+        <label><input type="checkbox" name="filter">Historical Buildings</label><br>
+      </div>
+      
+
       <div id="map"></div>
     </div>
   </div>
