re-commit the geocoder

--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -105,7 +105,7 @@
         <label><input type="checkbox" name="filter">Landmarks</label><br>
         <label><input type="checkbox" name="filter">Historical Buildings</label><br>
       </div>
-      
+
 
       <div id="map"></div>
     </div>
@@ -157,6 +157,16 @@
       });
   </script>
   <script src="js/leaflet-routing-machine.js"></script>
+
+
+
+  <!-- deals with geocoding -->
+  <!-- Load Esri Leaflet from CDN -->
+  <script src="https://unpkg.com/esri-leaflet@2.0.8"></script>
+  <!-- Esri Leaflet Geocoder -->
+  <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.4/dist/esri-leaflet-geocoder.css">
+  <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.4"></script>
+
   <script src="js/index.js"></script>
 </body>
 </html>
