Added start/end routing interface & ability to click markers and select as start or end

--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -18,6 +18,7 @@
       crossorigin=""/>
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="css/leaflet-routing-machine.css" />
+    <link rel="stylesheet" href="css/Control.Geocoder.css" />
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"
       integrity="sha512-A7vV8IFfih/D732iSSKi20u/ooOfj/AGehOKq0f4vLT1Zr2Y+RX7C+w8A1gaSasGtRUZpF/NZgzSAu4/Gc41Lg=="
       crossorigin=""></script>
@@ -157,7 +158,7 @@
       });
   </script>
   <script src="js/leaflet-routing-machine.js"></script>
-
+  <script src="js/Control.Geocoder.js"></script>
 
 
   <!-- deals with geocoding -->
