--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -111,9 +111,6 @@
       <div id="map"></div>
     </div>
   </div>
-
-
-
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
@@ -163,10 +160,10 @@
 
   <!-- deals with geocoding -->
   <!-- Load Esri Leaflet from CDN -->
-  <script src="https://unpkg.com/esri-leaflet@2.0.8"></script>
+  <!-- <script src="https://unpkg.com/esri-leaflet@2.0.8"></script> -->
   <!-- Esri Leaflet Geocoder -->
-  <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.4/dist/esri-leaflet-geocoder.css">
-  <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.4"></script>
+  <!-- <link rel="stylesheet" href="https://unpkg.com/esri-leaflet-geocoder@2.2.4/dist/esri-leaflet-geocoder.css">
+  <script src="https://unpkg.com/esri-leaflet-geocoder@2.2.4"></script> -->
 
   <script src="js/index.js"></script>
 </body>
