--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -100,11 +100,13 @@
       <!-- div for leaflet map -->
       <!-- div for map's filter-->
       <div class = "filter"> Filter by: <br>
-        <label><input type="checkbox" name="filter">Attractions</label><br>
-        <label><input type="checkbox" name="filter">Museums</label><br>
-        <label><input type="checkbox" name="filter">Parks and Trails</label><br>
-        <label><input type="checkbox" name="filter">Landmarks</label><br>
-        <label><input type="checkbox" name="filter">Historical Buildings</label><br>
+        <label><input type="checkbox" name="Attractions" checked>Attractions</label><br>
+        <label><input type="checkbox" name="Museums" checked>Museums</label><br>
+        <label><input type="checkbox" name="Parks" checked>Parks</label><br>
+        <label><input type="checkbox" name="College Campuses" checked>College Campuses</label><br>
+        <label><input type="checkbox" name="Landmarks" checked>Landmarks</label><br>
+        <label><input type="checkbox" name="Beaches" checked>Beaches</label><br>
+        <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings</label><br>
       </div>
 
 
