--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -28,43 +28,34 @@
 
 <body>
     <!-- Navigation Bar -->
-    <header class="navbar-inverse navbar-fixed-top" role="banner">
-      <div class="container">
-        <nav role="navigation">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#firstpage">Explore SD</a>
+    <nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Logo -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#firstpage">Explore SD</a>
+        </div>
+
+        <!-- Menu Items -->
+        <div class="collapse navbar-collapse" id="mainNavBar">
+          <ul class="nav navbar-nav">
+              <li><a href="#mapfeature">Map</a></li>
+              <li><a href="#">Fun Facts</a></li>
+          </ul>
+          <!-- will put this form at the bottom of first page -->
+          <form action="" class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Enter your address">
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-                <li><a href="#mapfeature">Map Feature</a></li>
-                <li><a href="#">Fun Facts</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Hotels or something</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Uber/Lyft</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
       </div>
-    </header>
+    </nav>
 
   <!-- First Part of Page -->
   <div id="firstpage">
@@ -168,6 +159,7 @@
         }
       });
   </script>
+
   <script src="js/leaflet-routing-machine.js"></script>
   <script src="js/Control.Geocoder.js"></script>
 
