--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="caption">
           <h1>Welcome to Explore SD</h1>
-          <h3>Let's go on an adventure</h3>
+          <h3>Share your adventure</h3>
         </div>
       </div>
     </div>
@@ -114,6 +114,12 @@
   </div>
 </div>
 
+
+<div class="footer">
+  <div class="container">
+    <footer>&copy;Team Guo-po<br /><a href="#firstpage">Back to top</a></footer>
+  </div>
+</div>
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
