--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -98,17 +98,31 @@
       <h2>Map</h2>
       <!-- div for leaflet map -->
       <!-- div for map's filter-->
-      <div class = "filter"> Filter by: <br>
-        <label><input type="checkbox" name="Attractions" checked>Attractions</label><br>
-        <label><input type="checkbox" name="Museums" checked>Museums</label><br>
-        <label><input type="checkbox" name="Parks" checked>Parks</label><br>
-        <label><input type="checkbox" name="College Campuses" checked>College Campuses</label><br>
-        <label><input type="checkbox" name="Landmarks" checked>Landmarks</label><br>
-        <label><input type="checkbox" name="Beaches" checked>Beaches</label><br>
-        <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings</label><br>
+      <div class = "container"> Filter by Category: <br>
+        <div class="filter row panel panel-default" id="filterBox">
+          <div class = "col-sm-3">
+            <label><input type="checkbox" name="Attractions" style="float:left" checked>Attractions</label><br>
+          </div>
+          <div class = "col-sm-3">
+            <label><input type="checkbox" name="Museums" style="" checked>Museums</label><br>
+          </div>
+          <div class = "col-sm-3">
+           <label><input type="checkbox" name="Parks" checked>Parks</label><br>
+          </div>
+          <div class = "col-sm-3">
+           <label><input type="checkbox" name="College Campuses" checked>College Campuses</label><br>
+          </div>
+          <div class = "col-sm-3">
+            <label><input type="checkbox" name="Landmarks" checked>Landmarks</label><br>
+          </div>
+          <div class = "col-sm-3">
+            <label><input type="checkbox" name="Beaches" checked>Beaches</label><br>
+          </div>
+          <div class = "col-sm-3">
+            <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings</label><br>
+          </div>
+        </div>
       </div>
-
-
       <div id="map"></div>
     </div>
   </div>
