set up filtering boxes for price, will add function for filering later

--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -101,7 +101,7 @@
       <div class = "container"> Filter by Category: <br>
         <div class="filter row panel panel-default" id="filterBox">
           <div class = "col-sm-3">
-            <label><input type="checkbox" name="Attractions" style="float:left" checked>Attractions</label><br>
+            <label><input type="checkbox" name="Attractions" checked>Attractions</label><br>
           </div>
           <div class = "col-sm-3">
             <label><input type="checkbox" name="Museums" style="" checked>Museums</label><br>
@@ -121,6 +121,23 @@
           <div class = "col-sm-3">
             <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings</label><br>
           </div>
+        </div>
+      </div>
+      <!-- div for price filter -->
+      <div class = "container"> Filter by Price: <br>
+        <div class="filter row panel panel-default" id="filterBox">
+            <div class = "col-sm-3">
+              <label><input type="checkbox" name="<$10" style="float:left" checked> < $10 </label><br>
+            </div>
+            <div class = "col-sm-3">
+              <label><input type="checkbox" name="$10" style="" checked> [ $10 - $20 ] </label><br>
+            </div>
+            <div class = "col-sm-3">
+             <label><input type="checkbox" name="$20" checked> [$21-50] </label><br>
+            </div>
+            <div class = "col-sm-3">
+             <label><input type="checkbox" name="$40" checked> > $50 </label><br>
+            </div>
         </div>
       </div>
       <div id="map"></div>
