Added images and website URL to click function

--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -92,6 +92,11 @@
         <div id="price"></div>
         <br>
         <div id="category"></div>
+        <br>
+        <div id="websiteURL"></div>
+        <br>
+        <div id="image1"></div>
+        <br>
       </div>
     </div>
     <div class="col-md-9 text-center">
