some style fixes

--- a/cogs121/public/index.html
+++ b/cogs121/public/index.html
@@ -103,7 +103,8 @@
       <h2>Map</h2>
       <!-- div for leaflet map -->
       <!-- div for map's filter-->
-      <div class = "container"> Filter by Category: <br>
+      Filter by Category: <br>
+      <div class = "container"> 
         <div class="filter row panel panel-default" id="filterBox">
           <div class = "col-sm-3">
             <label><input type="checkbox" name="Attractions" checked>Attractions</label><br>
@@ -129,18 +130,22 @@
         </div>
       </div>
       <!-- div for price filter -->
-      <div class = "container"> Filter by Price: <br>
+      Filter by Price: <br>
+      <div class = "container"> 
         <div class="filter row panel panel-default" id="filterBox">
-            <div class = "col-sm-3">
+            <div class = "col-sm-2">
+              <label><input type="checkbox" name="<$10" style="float:left" checked> FREE </label><br>
+            </div>
+            <div class = "col-sm-2">
               <label><input type="checkbox" name="<$10" style="float:left" checked> < $10 </label><br>
             </div>
-            <div class = "col-sm-3">
+            <div class = "col-sm-2">
               <label><input type="checkbox" name="$10" style="" checked> [ $10 - $20 ] </label><br>
             </div>
-            <div class = "col-sm-3">
+            <div class = "col-sm-2">
              <label><input type="checkbox" name="$20" checked> [$21-50] </label><br>
             </div>
-            <div class = "col-sm-3">
+            <div class = "col-sm-2">
              <label><input type="checkbox" name="$40" checked> > $50 </label><br>
             </div>
         </div>
