Sidebar displays all location info

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -75,9 +75,9 @@
   <!-- Bootstrap Grid System -->
   <div id="mapfeature">
   <div class="row">
-    <div class="col-md-3">
+    <div id="locations-list" class="col-md-3">
       <h2 style="text-align: center">Location</h2>
-      <br>
+      <!-- <br>
       <div id="instruction" style="text-align: center">
         Click on a marker on the map to see information about that location below.
       </div>
@@ -97,7 +97,7 @@
         <br>
         <div id="image1"></div>
         <br>
-      </div>
+      </div> -->
     </div>
     <div class="col-md-9 text-center">
       <h2>Map</h2>
@@ -105,7 +105,7 @@
       <!-- div for map's filter-->
       <p id = "left_title"> Filter By: Category </p>
       <p id = "right_title"> Filter By: Price </p>
-      <div class = "container"> 
+      <div class = "container">
         <div class="filter row panel panel-default" id="left_filter">
           <div class = "col-sm-5">
             <label><input type="checkbox" name="Attractions" checked>Attractions</label>
