--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -76,7 +76,8 @@
   <div id="mapfeature">
   <div class="row">
     <div id="locations-list" class="col-md-3">
-      <h2 style="text-align: center">Location</h2>
+      <h2 style="text-align: center">Locations</h2>
+      <br>
       <!-- <br>
       <div id="instruction" style="text-align: center">
         Click on a marker on the map to see information about that location below.
