Added basic save/remove feature for locations

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -80,14 +80,16 @@
         <button class="tablinks" onclick="openTab(event, 'locations-list')">SD Places</button>
         <button class="tablinks" onclick="openTab(event, 'saved-list')">Saved Places</button>
       </div>
-      <h2 style="text-align: center">Locations</h2>
-      <br>
       <!-- Locations List -->
       <div id="locations-list" class="tabcontent">
+        <h2 style="text-align: center">Places</h2>
+        <br>
       </div>
 
       <!-- Saved Locations List -->
       <div id="saved-list" class="tabcontent">
+        <h2 style="text-align: center">Saved Places</h2>
+        <br>
       </div>
       <!-- <br>
       <div id="instruction" style="text-align: center">
