fun facts page draft with pictures

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse" id="mainNavBar">
           <ul class="nav navbar-nav">
               <li><a href="#mapfeature">Map</a></li>
-              <li><a href="#">Fun Facts</a></li>
+              <li><a href="#facts">Fun Facts</a></li>
           </ul>
           <!-- will put this form at the bottom of first page -->
           <form action="" class="navbar-form navbar-right" role="search">
@@ -175,12 +175,37 @@
   </div>
 </div>
 
-
-<div class="footer">
+<hr>
+<!-- fun facts page -->
+<div id="facts">
   <div class="container">
-    <footer>&copy;Team Guo-po<br /><a href="#firstpage">Back to top</a></footer>
+    <div class="row">
+      <div class="col-lg-12 text-center">
+          <h3>Why San Diego?</h3>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="history-column col-lg-4">
+        <img src="images/BalboaPark.jpg">
+        <h3>History<h3>
+      </div>
+      <div class="attraction-column col-lg-4">
+        <img src="images/Gaslamp.jpg">
+        <h3>Attractions</h3>
+      </div>
+      <div class="beaches-column col-lg-4">
+        <img src="images/Windansea.jpg">
+        <h3>Beaches</h3>
+      </div>
+    </div>
   </div>
 </div>
+
+<footer>
+    <p class="center">&copy;Team Guo-po 2017</p>
+</footer>
 
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
