--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -169,6 +169,16 @@
              <label><input type="checkbox" name="51" checked> > $50 </label>
             </div>
         </div>
+        
+                <div class = "col-sm-5">
+                  <form action="" class="searchbar" role="search">
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Search for places..">
+                    </div>
+                  </form>
+                </div>
+
+
       </div>
       <div id="map"></div>
     </div>
