Displays list of places without hiding it initially

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -77,7 +77,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'locations-list')">SD Places</button>
+        <button class="tablinks active" onclick="openTab(event, 'locations-list')">SD Places</button>
         <button class="tablinks" onclick="openTab(event, 'saved-list')">Saved Places</button>
       </div>
       <!-- Locations List -->
@@ -169,7 +169,7 @@
              <label><input type="checkbox" name="51" checked> > $50 </label>
             </div>
         </div>
-        
+
                 <div class = "col-sm-5">
                   <form action="" class="searchbar" role="search">
                     <div class="form-group">
