--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -24,6 +24,11 @@
       crossorigin=""></script>
     <link href="https://fonts.googleapis.com/css?family=Bad+Script|Noto+Sans|Nunito+Sans" rel="stylesheet">
 
+    <!-- for customized markers -->
+    <!--<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> -->
+    <script src="https://use.fontawesome.com/4fb022d608.js"></script>
+    <link rel="stylesheet" href="customicons/leaflet.awesome-markers.css">
+
 </head>
 
 <body>
@@ -316,6 +321,7 @@
 
   <script src="js/leaflet-routing-machine.js"></script>
   <script src="js/Control.Geocoder.js"></script>
+  <script src="customicons/leaflet.awesome-markers.js"></script>
 
 
   <!-- deals with geocoding -->
