Moved search bar

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -81,6 +81,13 @@
   <div id="mapfeature">
   <div class="row">
     <div class="col-md-3">
+      <div>
+        <form action="" class="searchbar" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search for places..">
+          </div>
+        </form>
+      </div>
       <div class="tab">
         <button class="tablinks active" onclick="openTab(event, 'locations-list')">SD Places</button>
         <button class="tablinks" onclick="openTab(event, 'saved-list')">Saved Places</button>
@@ -186,16 +193,6 @@
              <label><input type="checkbox" name="51" checked> > $50 </label>
             </div>
         </div>
-
-                <div class = "col-sm-5">
-                  <form action="" class="searchbar" role="search">
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Search for places..">
-                    </div>
-                  </form>
-                </div>
-
-
       </div>
       <div id="map"></div>
     </div>
