get your current location with button under map

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -198,6 +198,8 @@
         </div>
       </div>
       <div id="map"></div>
+      <input type="button" value="Get Your Location" onclick="getLocationLeaflet()">
+
     </div>
   </div>
 </div>
