--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -140,7 +140,10 @@
       <h2>Map</h2>
       <!-- div for leaflet map -->
       <!-- div for map's filter-->
-      <div class = "container">
+      <div class = "randomsearch">
+          <button type="submit" class="randomsearchbtn" id="randomsearch" onclick="randomSearch(72)">Suggest a Random place</button>
+      </div>
+      <!--<div class = "container">
         <div class = "row">
           <div class = "col-lg-6 filter_title">
             Filter By: Category
@@ -149,52 +152,50 @@
             Filter By: Price
           </div>
         </div>
-      </div>
-      <div class = "container">
+      </div>-->
+      <div class = "filter_container">
+        <p class="filter_title"><b> Filter by: Category </b> </p>
         <div class="filter row panel panel-default" id="left_filter">
-          <div class = "col-sm-5">
+          <div class = "col-sm-2 xs">
             <label><input type="checkbox" name="Attractions" checked>Attractions</label>
           </div>
-          <div class = "col-sm-5">
+          <div class = "col-sm-2 xs">
             <label><input type="checkbox" name="Museums" checked>Museums</label>
           </div>
-          <div class = "col-sm-5">
+          <div class = "col-sm-1 xxs">
            <label><input type="checkbox" name="Parks" checked>Parks</label>
           </div>
-          <div class = "col-sm-5">
+          <div class = "col-sm-2">
            <label><input type="checkbox" name="College Campuses" checked>College Campuses</label>
           </div>
-          <div class = "col-sm-5">
+          <div class = "col-sm-2 xs">
             <label><input type="checkbox" name="Landmarks" checked>Landmarks</label>
           </div>
-          <div class = "col-sm-5">
+          <div class = "col-sm-1 xs">
             <label><input type="checkbox" name="Beaches" checked>Beaches</label>
           </div>
-          <div class = "col-sm-5">
+          <div class = "col-sm-2">
             <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings</label>
           </div>
         </div>
       <!-- div for price filter -->
+        <p class="filter_title"> <b> Filter by: Price </b> </p>
         <div class="filter row panel panel-default" id="right_filter">
-            <div class = "col-sm-4">
+            <div class = "col-sm-2">
               <label><input type="checkbox" name="FREE" checked> FREE </label>
             </div>
-            <div class = "col-sm-4">
+            <div class = "col-sm-2">
               <label><input type="checkbox" name="9" checked> < $10 </label>
             </div>
-            <div class = "col-sm-4">
+            <div class = "col-sm-2 lg">
               <label><input type="checkbox" name="10" style="" checked> [ $10 - $20 ] </label>
             </div>
-            <div class = "col-sm-4">
+            <div class = "col-sm-2 lg">
              <label><input type="checkbox" name="21" checked> [ $21 - 50 ] </label>
             </div>
-            <div class = "col-sm-4">
+            <div class = "col-sm-2">
              <label><input type="checkbox" name="51" checked> > $50 </label>
             </div>
-        </div>
-
-        <div class = "randomsearch">
-          <button type="submit" class="randomsearchbtn" id="randomsearch" onclick="randomSearch(72)">Suggest a Random place</button>
         </div>
       </div>
       <div id="map"></div>
