--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -28,7 +28,6 @@
     <!--<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"> -->
     <script src="https://use.fontawesome.com/4fb022d608.js"></script>
     <link rel="stylesheet" href="customicons/leaflet.awesome-markers.css">
-
 </head>
 
 <body>
@@ -125,8 +124,33 @@
                 <br>
                 <div id="websiteURL"></div>
                 <br>
-                <div id="image1"></div>
-                <br>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                  <li data-target="#myCarousel" data-slide-to="1"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                  <div class="item active img_1">
+                  </div>
+
+                  <div class="item img_2">
+                  </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <!--<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>-->
+              </div>  
+              <br>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
