--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -83,7 +83,7 @@
       <!-- seach bar -->
       <div class= "search-bar"> <input type="text" id="search-criteria" placeholder="Search for places..">
          <!-- onkeyup="search()" -->
-        <input type="button" id="search" value="search">
+        <input type="button" id="search" value="search" onclick="search(72)">
      </div>
 
       <div class="tab">
@@ -149,7 +149,7 @@
                   <span class="glyphicon glyphicon-chevron-right"></span>
                   <span class="sr-only">Next</span>
                 </a>-->
-              </div>  
+              </div>
               <br>
             </div>
             <div class="modal-footer">
