Changed body font & centered map section

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -79,6 +79,7 @@
   <!-- Bootstrap Grid System -->
   <div id="mapfeature">
   <div class="row">
+    <div class="col-md-1"></div>
     <div class="col-md-3">
       <!-- seach bar -->
       <div class= "search-bar"> <input type="text" id="search-criteria" placeholder="Search for places..">
@@ -160,7 +161,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-9 text-center">
+    <div class="col-md-7 text-center">
       <h2>Map</h2>
       <!-- div for leaflet map -->
       <!-- div for map's filter-->
@@ -226,6 +227,7 @@
       <input type="button" value="Get Your Location" onclick="getLocationLeaflet()">
 
     </div>
+    <div class="col-md-1"></div>
   </div>
 </div>
 
