--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -66,7 +66,7 @@
     <div class="row" id="box-search">
       <div class="thumbnail text-center">
         <div class="background-image">
-          <img class="img-responsive" src="images/SDSkyline.jpg">
+          <img class="img-responsive" src="images/skylineSD.jpg">
         </div>
         <div class="caption">
           <h1>Welcome to Explore SD</h1>
