--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -134,12 +134,12 @@
       </div> <!-- end of overall row -->
       <hr>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-lg-12 factsfooter text-center">
             <h3>Now Go Explore!</h3>
         </div>
       </div>
-      <hr>
+      <hr>-->
     </div> <!-- end of container-fluid -->
   </div> <!-- end of facts page -->
 
@@ -251,26 +251,28 @@
       <div class = "filter_container">
         <p class="filter_title"><b> Filter by: Category </b> </p>
         <div class="filter row panel panel-default" id="left_filter">
-          <div class = "col-sm-2 xs">
+          <div class = "col-sm-2">
             <label><input type="checkbox" name="Attractions" checked>Attractions</label>
           </div>
-          <div class = "col-sm-2 xs">
-            <label><input type="checkbox" name="Museums" checked>Museums</label>
-          </div>
-          <div class = "col-sm-1 xxs">
-           <label><input type="checkbox" name="Parks" checked>Parks</label>
-          </div>
           <div class = "col-sm-2">
-           <label><input type="checkbox" name="College Campuses" checked>College Campuses</label>
-          </div>
-          <div class = "col-sm-2 xs">
-            <label><input type="checkbox" name="Landmarks" checked>Landmarks</label>
-          </div>
-          <div class = "col-sm-1 xs">
             <label><input type="checkbox" name="Beaches" checked>Beaches</label>
           </div>
-          <div class = "col-sm-2">
+          <div class = "col-sm-3">
+           <label><input type="checkbox" name="College Campuses" checked>College Campuses</label>
+          </div>
+          <div class = "col-sm-3">
             <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings</label>
+          </div>
+          <div class="row">
+            <div class = "col-sm-2">
+              <label><input type="checkbox" name="Landmarks" checked>Landmarks</label>
+            </div>
+            <div class = "col-sm-2">
+              <label><input type="checkbox" name="Museums" checked>Museums</label>
+            </div>
+            <div class = "col-sm-2">
+             <label><input type="checkbox" name="Parks" checked>Parks</label>
+            </div>
           </div>
         </div>
       <!-- div for price filter -->
@@ -282,11 +284,11 @@
             <div class = "col-sm-2">
               <label><input type="checkbox" name="9" checked> < $10 </label>
             </div>
-            <div class = "col-sm-2 lg">
-              <label><input type="checkbox" name="10" style="" checked> [ $10 - $20 ] </label>
+            <div class = "col-sm-2">
+              <label><input type="checkbox" name="10" style="" checked> $10 - $20 </label>
             </div>
-            <div class = "col-sm-2 lg">
-             <label><input type="checkbox" name="21" checked> [ $21 - 50 ] </label>
+            <div class = "col-sm-2">
+             <label><input type="checkbox" name="21" checked> $21 - 50 </label>
             </div>
             <div class = "col-sm-2">
              <label><input type="checkbox" name="51" checked> > $50 </label>
