Made modal responsive and added save button to modal footer

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -166,14 +166,10 @@
       </div>
       <!-- Locations List -->
       <div id="locations-list" class="tabcontent">
-        <h2 style="text-align: center">Places</h2>
-        <br>
       </div>
 
       <!-- Saved Locations List -->
       <div id="saved-list" class="tabcontent">
-        <h2 style="text-align: center">Saved Places</h2>
-        <br>
       </div>
 
       <!-- Modal -->
@@ -227,7 +223,7 @@
               <br>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-default"  data-dismiss="modal">Save</button>
             </div>
           </div>
 
