--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -248,29 +248,36 @@
         <p class="filter_title"><b> Filter by: Category </b> </p>
         <div class="filter row panel panel-default" id="left_filter">
           <div class = "col-sm-2">
-            <label><input type="checkbox" name="Attractions" checked>Attractions</label>
+            <label><input type="checkbox" name="Attractions" checked>Attractions -</label>
+            <img src="/images/attractions.png" class="thumbnail">
           </div>
           <div class = "col-sm-2">
-            <label><input type="checkbox" name="Beaches" checked>Beaches</label>
+            <label><input type="checkbox" name="Beaches" checked>Beaches -</label>
+            <img src="/images/beaches.png" class="thumbnail">
           </div>
           <div class = "col-sm-3">
-           <label><input type="checkbox" name="College Campuses" checked>College Campuses</label>
+           <label><input type="checkbox" name="College Campuses" checked>College Campuses -</label>
+           <img src="/images/colleges.png" class="thumbnail">
           </div>
           <div class = "col-sm-3">
-            <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings</label>
+            <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings -</label>
+            <img src="/images/buildings.png" class="thumbnail">
           </div>
-          <div class="row">
-            <div class = "col-sm-2">
-              <label><input type="checkbox" name="Landmarks" checked>Landmarks</label>
-            </div>
-            <div class = "col-sm-2">
-              <label><input type="checkbox" name="Museums" checked>Museums</label>
-            </div>
-            <div class = "col-sm-2">
-             <label><input type="checkbox" name="Parks" checked>Parks</label>
-            </div>
+        <div class="row row_2">
+          <div class = "col-sm-2">
+            <label><input type="checkbox" name="Landmarks" checked>Landmarks -</label>
+            <img src="/images/landmarks.png" class="thumbnail">
+          </div>
+          <div class = "col-sm-2">
+            <label><input type="checkbox" name="Museums" checked>Museums -</label>
+            <img src="/images/musums.png" class="thumbnail">
+          </div>
+          <div class = "col-sm-2">
+            <label><input type="checkbox" name="Parks" checked>Parks -</label>
+            <img src="/images/parks.png" class="thumbnail">
           </div>
         </div>
+      </div>
       <!-- div for price filter -->
         <p class="filter_title"> <b> Filter by: Price </b> </p>
         <div class="filter row panel panel-default" id="right_filter">
