legend fixes for small screen size

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -247,7 +247,7 @@
       <div class = "filter_container">
         <p class="filter_title"><b> Filter by: Category </b> </p>
         <div class="filter row panel panel-default" id="left_filter">
-          <div class = "col-sm-2">
+          <div class = "col-sm-2 md">
             <label><input type="checkbox" name="Attractions" checked>Attractions -</label>
             <img src="/images/attractions.png" class="thumbnail">
           </div>
@@ -264,7 +264,7 @@
             <img src="/images/buildings.png" class="thumbnail">
           </div>
         <div class="row row_2">
-          <div class = "col-sm-2">
+          <div class = "col-sm-2 md">
             <label><input type="checkbox" name="Landmarks" checked>Landmarks -</label>
             <img src="/images/landmarks.png" class="thumbnail">
           </div>
